[FIX]修改了项目md

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ theme: book
 #   type: ""
 deploy:
   type: git
-  repo: https://github.com/lixingjuan/Blog/dist
+  repo: https://github.com/lixingjuan/Blog
   # example, https://github.com/hexojs/hexojs.github.io
   branch: master
 markdown:
