--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "start": "concurrently \"node ./../BlogBody/source/_node/index.js\"  \"hexo server\""
   },
   "hexo": {
     "version": "4.2.0"
+  },
+  "devDependencies": {
+    "yarn": "^1.13.0"
   },
   "dependencies": {
     "hexo": "^4.0.0",
