[ADD]添加了redux文章

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "start": "node ./../BlogBody/source/_node/index.js && hexo server",
+    "start": "hexo clean && node ./themes/book/node/index.js && hexo server",
     "up": "hexo clean && hexo g && hexo d"
   },
   "hexo": {
