--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "up": "hexo clean && node ./source/_node/index.js && hexo g && hexo d"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "4.2.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
     "yarn": "^1.13.0"
   },
   "dependencies": {
+    "drag-and-flex-antd-table": "^0.1.0",
     "hexo": "^4.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
