--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "hexo clean && hexo generate",
     "dev": "cd server egg-bin dev",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
@@ -12,7 +12,7 @@
     "up": "hexo clean && node ./source/_node/index.js && hexo g && hexo d"
   },
   "hexo": {
-    "version": "4.2.1"
+    "version": "4.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -31,6 +31,7 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-markdown-it": "^4.1.0",
+    "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
