add: 添加泛型&同步setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,7 +109,8 @@
   // "pasteImage.prefix": "source/images/",
   // "pasteImage.insertPattern": "{% asset_img ${imageFileName} %}",
   /* paste image 默认文件名称, 如果有该设置，则本地预览不行 */
-  "pasteImage.defaultName":"${currentFileNameWithoutExt}-YY-MM-DD-HH-mm-ss"
+  "pasteImage.defaultName": "${currentFileNameWithoutExt}-YY-MM-DD-HH-mm-ss",
+  "git.ignoreLimitWarning": true
 }
 
 
