--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "markdown-it-mark": "^3.0.0",
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0"
+    "markdown-it-sup": "^1.0.0",
+    "node-sass": "^6.0.0",
+    "nvm": "^0.0.4"
   },
   "description": "- 这里是李幸娟博客的主体代码 - 博客文章资源位于 `'./source'` 目录下 - 博客文章位于仓库 [Blog](https://github.com/lixingjuan/Blog)",
   "main": ".eslintrc.js",
