--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "node-sass": "^6.0.0",
     "nvm": "^0.0.4"
   },
-  "description": "- 这里是李幸娟博客的主体代码 - 博客文章资源位于 `'./source'` 目录下 - 博客文章位于仓库 [Blog](https://github.com/lixingjuan/Blog)",
+  "description": "- 这里是李幸娟博客的主体代码 - 博客文章资源位于 `'./source'` 目录下 - 博客文章位于仓库 [Blog](https://github.com/lixingjuan/)",
   "main": ".eslintrc.js",
   "keywords": [],
   "author": "",
