--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,10 @@
   "editor.tabSize": 2,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-    "[markdown]": {
+  "[markdown]": {
     "editor.defaultFormatter": "fcrespo82.markdown-table-formatter",
     "editor.wordWrap": "on",
+    "editor.formatOnSave": true,
     "editor.quickSuggestions": true // 打开markdown文件的智能感知提示，解决markdown文件代码片段不生效问题
-  },
+  }
 }
