--- a/package.json
+++ b/package.json
@@ -18,9 +18,22 @@
   },
   "homepage": "https://github.com/lixingjuan/learn-webpack#readme",
   "devDependencies": {
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "csv-loader": "^3.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "json5": "^2.2.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "toml": "^3.0.0",
+    "yaml": "^1.10.2"
   }
 }
