--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/lixingjuan/learn-webpack#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "csv-loader": "^3.0.3",
@@ -28,12 +31,13 @@
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
-    "xml-loader": "^1.2.1"
-  },
-  "dependencies": {
+    "xml-loader": "^1.2.1",
+    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/runtime": "^7.16.7",
     "json5": "^2.2.0",
     "mini-css-extract-plugin": "^2.5.3",
     "toml": "^3.0.0",
     "yaml": "^1.10.2"
-  }
+  },
+  "dependencies": {}
 }
