feat: part1-10 publicPath & 配置script & 配置环境变量 & 拆分webpack配置文件 & 提取并合并配置文件

--- a/10-multiple-env/package.json
+++ b/10-multiple-env/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "webpack serve -c ./config/webpack.config.js --env development",
+    "build": "webpack -c ./config/webpack.config.js --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
