feat: 增加一些Promise相关手写题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "editor.formatOnSave": true,
     "editor.quickSuggestions": true // 打开markdown文件的智能感知提示，解决markdown文件代码片段不生效问题
   },
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "prettier.printWidth": 100
 }
