--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prism-react-renderer": "^1.3.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "xmind-embed-viewer": "^1.0.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.20",
