--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,16 @@
 {
-  // 使用 IntelliSense 了解相关属性。
-  // 悬停以查看现有属性的描述。
-  // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "type": "pwa-node",
       "request": "launch",
       "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${file}"
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/del.js",
+      "runtimeExecutable": "/Users/lixingjuan/.nvm/versions/node/v16.2.0/bin/node"
     }
   ]
 }
