--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "[markdown]": {
-    "editor.defaultFormatter": "fcrespo82.markdown-table-formatter",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.wordWrap": "on",
     "editor.formatOnSave": true,
     "editor.quickSuggestions": {
