--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "node scripts/index.mjs"
+    "build": "node index.mjs"
   },
   "dependencies": {
     "marked": "^4.0.0"
